--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             android:background="@drawable/sss">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/email_edit_text"
                 android:layout_width="266dp"
                 android:layout_height="63dp"
                 android:layout_marginLeft="50dp"
@@ -46,7 +46,7 @@
                 android:textColorHint="#706D6D" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/pasword_edit_text"
                 android:layout_width="266dp"
                 android:layout_height="63dp"
                 android:layout_marginLeft="50dp"
@@ -80,7 +80,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/signup_intent"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="100dp"
