--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -70,7 +70,7 @@
 
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/password_edit_text"
                 android:layout_width="266dp"
                 android:layout_height="63dp"
                 android:layout_marginLeft="50dp"
@@ -94,7 +94,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/signup_button"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="100dp"
@@ -109,7 +109,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
