--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:textSize="30sp"
         android:id="@+id/profile_button"
         android:elevation="10dp"
-        android:padding="10dp"
-        android:outlineProvider="paddedBounds"
+        android:padding="20dp"
+        android:outlineProvider="bounds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
