--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,37 @@
     android:layout_height="match_parent"
     android:background="#FFF"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/sell_product"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:elevation="10dp"
+        android:outlineProvider="bounds"
+        android:padding="20dp"
+        android:text="Sell product"
+        android:textColor="#000"
+        android:textSize="30sp"
+        app:layout_constraintVertical_bias=".3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:text="Buy Product"
+        android:textColor="#000"
+        android:textSize="30sp"
+        android:id="@+id/buy_product"
+        android:elevation="10dp"
+        android:padding="20dp"
+        android:outlineProvider="bounds"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/sell_product"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
     <TextView
         android:text="Profile"
         android:textColor="#000"
@@ -17,9 +48,8 @@
         android:outlineProvider="bounds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/buy_product"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
