--- a/app/src/main/res/layout/activity_buy_product.xml
+++ b/app/src/main/res/layout/activity_buy_product.xml
@@ -6,16 +6,13 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".BuyProduct">
-    <TextView
-        android:id="@+id/text_view"
-        android:background="@color/white"
-        android:textColor="@color/black"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/all_product_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="match_parent"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
