--- a/app/src/main/res/layout/fragment_admin_category.xml
+++ b/app/src/main/res/layout/fragment_admin_category.xml
@@ -3,10 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:textSize="40sp"
-        android:textColor="@color/black_1"
-        android:text="@string/categories"
+        android:id="@+id/text"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="20dp"
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:background="@color/white_1"
+        android:scrollbars="vertical"
         android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
