--- a/app/src/main/res/layout/fragment_admin_category.xml
+++ b/app/src/main/res/layout/fragment_admin_category.xml
@@ -4,11 +4,15 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/text"
+        android:text="@string/categories"
+        android:textColor="@color/black_1"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="20dp"
         android:id="@+id/recycler_view"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:background="@color/white_1"
         android:scrollbars="vertical"
