--- a/app/src/main/res/layout/fragment_admin_category.xml
+++ b/app/src/main/res/layout/fragment_admin_category.xml
@@ -9,15 +9,24 @@
         android:textColor="@color/black_1"
         android:gravity="center"
         android:layout_width="match_parent"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_height="match_parent"/>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="20dp"
         android:id="@+id/recycler_view"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:background="@color/white_1"
         android:scrollbars="vertical"
         android:layout_height="match_parent"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_baseline_add_circle_96"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
