Revert "fragment admin category xml"
This reverts commit 77ee14cc74dde7612e1cbccb28980cdc6e12b05c.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_1"
+    android:background="#FFF"
     tools:context=".MainActivity">
 
     <TextView
@@ -19,7 +19,6 @@
         android:text="@string/sell_product"
         android:textColor="#000"
         android:textSize="30sp"
-        android:background="@color/white_1"
         app:layout_constraintVertical_bias=".3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +30,6 @@
         android:textSize="30sp"
         android:id="@+id/buy_product"
         android:elevation="2dp"
-        android:background="@color/white_1"
         android:padding="20dp"
         android:outlineProvider="bounds"
         android:layout_width="wrap_content"
@@ -40,7 +38,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
-
     <TextView
         android:text="@string/profile"
         android:textColor="#000"
@@ -48,7 +45,6 @@
         android:id="@+id/profile_button"
         android:elevation="2dp"
         android:padding="20dp"
-        android:background="@color/white_1"
         android:outlineProvider="bounds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
