--- a/app/src/main/res/layout/activity_buy_product.xml
+++ b/app/src/main/res/layout/activity_buy_product.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_1"
+    android:background="@color/white"
     tools:context=".BuyProduct">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_product_recycler_view"
