--- a/app/src/main/res/layout/item_product_category.xml
+++ b/app/src/main/res/layout/item_product_category.xml
@@ -4,14 +4,15 @@
     android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white_1"
-    android:elevation="2dp"
+    android:elevation="8dp"
     android:outlineProvider="bounds"
     android:padding="10dp"
+    android:layout_margin="15dp"
     xmlns:tools="http://schemas.android.com/tools">
     <ImageView
         android:id="@+id/cat_image"
         android:layout_width="60dp"
-        tools:src="@drawable/ic_profile"
+        tools:src="@drawable/ic_launcher_foreground"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +32,8 @@
         android:id="@+id/cat_edit"
         android:layout_width="60dp"
         android:src="@drawable/ic_baseline_edit_24"
-        android:padding="5dp"
+        android:padding="15dp"
+        android:tint="@color/black_1"
         android:layout_height="match_parent"
         app:layout_constraintStart_toEndOf="@+id/cat_name"
         app:layout_constraintEnd_toStartOf="@id/cat_delete"
@@ -41,7 +43,9 @@
         android:id="@+id/cat_delete"
         android:layout_width="60dp"
         android:src="@drawable/ic_baseline_delete_24"
-        android:padding="5dp"
+        android:background="@color/white_1"
+        android:tint="@color/black_1"
+        android:padding="15dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toEndOf="@+id/cat_edit"
         app:layout_constraintEnd_toEndOf="parent"
