--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -29,6 +29,7 @@
         <LinearLayout
             android:background="@color/white_1"
             android:layout_width="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"
             android:layout_height="match_parent">
             <FrameLayout
                 android:id="@+id/admin_fragment_container"
