--- a/app/src/main/res/layout/activity_sell_product.xml
+++ b/app/src/main/res/layout/activity_sell_product.xml
@@ -91,7 +91,6 @@
                             app:boxStrokeColor="@color/black"
                             app:hintAnimationEnabled="true"
                             app:hintTextColor="@color/black_1">
-
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/price_edit_text"
                                 android:layout_width="match_parent"
@@ -100,6 +99,21 @@
                                 android:inputType="number"
                                 android:textColorHint="@color/black_1" />
                         </com.google.android.material.textfield.TextInputLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:background="@color/black_1"
+                            android:elevation="20dp">
+
+                            <Spinner
+                                android:id="@+id/cat_spinner"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+
+                        </LinearLayout>
 
                         <com.google.android.material.textfield.TextInputLayout
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
