--- a/app/src/main/res/layout/activity_sell_product.xml
+++ b/app/src/main/res/layout/activity_sell_product.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/white_1"
     tools:context=".SellProduct">
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="80dp" />
+                android:visibility="gone"
+                android:layout_height="?attr/actionBarSize" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -186,5 +187,4 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
