--- a/app/src/main/res/layout/activity_buy_product.xml
+++ b/app/src/main/res/layout/activity_buy_product.xml
@@ -13,6 +13,11 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
+        app:menu="@menu/bottom_nav_menu"
+        android:foregroundTint="@color/white_1"
+        app:itemTextColor="@color/white_1"
+        app:itemIconTint="@color/white_1"
+        app:itemRippleColor="@color/white_1"
         android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
