--- a/app/src/main/res/layout/activity_buy_product.xml
+++ b/app/src/main/res/layout/activity_buy_product.xml
@@ -9,8 +9,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_product_recycler_view"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent"/>
+    <FrameLayout
+        android:id="@+id/buyer_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bn"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bn"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         app:menu="@menu/bottom_nav_menu"
