--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white_1"
+    android:elevation="10dp"
+    android:layout_margin="10dp"
+    android:outlineProvider="paddedBounds"
     xmlns:tools="http://schemas.android.com/tools">
     <ImageView
         android:id="@+id/product_image_view"
@@ -15,12 +19,14 @@
     <TextView
         tools:text="@tools:sample/lorem"
         android:id="@+id/product_name_text_view"
+        android:textColor="@color/black_1"
         app:layout_constraintBottom_toTopOf="@id/price_text_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
     <TextView
         tools:text="$500"
         android:id="@+id/price_text_view"
+        android:textColor="@color/black_1"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
