--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,4 +8,5 @@
     <dimen name="font_size">16dp</dimen>
     <dimen name="font_size_small">14dp</dimen>
     <dimen name="font_size_medium">20dp</dimen>
+    <dimen name="space_20">20</dimen>
 </resources>
