--- a/app/src/main/res/layout/item_bids.xml
+++ b/app/src/main/res/layout/item_bids.xml
@@ -3,11 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    android:padding="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <TextView
         android:id="@+id/bid_amount_text_view"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="This is... Business. Ha ha ha."
@@ -18,6 +21,8 @@
         android:id="@+id/bid_details_text_view"
         tools:text="$50000000"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bid_amount_text_view"
         android:layout_width="match_parent"
         android:textColor="@color/black_1"
