--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,23 @@
     <TextView
         android:text="@string/profile"
         android:textColor="#000"
+        android:visibility="gone"
         android:textSize="30sp"
         android:id="@+id/profile_button"
+        android:elevation="2dp"
+        android:padding="20dp"
+        android:background="@color/white_1"
+        android:outlineProvider="bounds"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/buy_product"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:text="My Products for sale"
+        android:textColor="#000"
+        android:textSize="30sp"
+        android:id="@+id/my_product_for_sell"
         android:elevation="2dp"
         android:padding="20dp"
         android:background="@color/white_1"
