--- a/app/src/main/res/layout/activity_my_products_for_sell.xml
+++ b/app/src/main/res/layout/activity_my_products_for_sell.xml
@@ -5,5 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyProductsForSell">
-
+    <FrameLayout
+        android:id="@+id/my_product_for_sell_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
