--- a/app/src/main/res/layout/activity_approve.xml
+++ b/app/src/main/res/layout/activity_approve.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/name_text_view"
         />
-    <TextView
+P    <TextView
         android:id="@+id/name_text_view"
         android:textSize="24sp"
         android:textColor="@color/black_1"
@@ -26,8 +26,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="@tools:sample/full_names"
-        app:layout_constraintStart_toEndOf="name_label"/>
+        tools:text="@tools:sample/full_names"/>
     <TextView
         android:id="@+id/phone_label"
         android:text="Phone: "
@@ -47,8 +46,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/name_text_view"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="@tools:sample/us_phones"
-        app:layout_constraintStart_toEndOf="name_label"/>
+        tools:text="@tools:sample/us_phones"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
